# vu-ai-pris

./: README.md  analysis.ipynb  calling_llm.py  history_parsing.ipynb  matches_stats.csv  pyproject.toml  run_all.sh
schnapsen_llm_bench/: bot.py  calling_llm.py  db.py  game.py  llm.py  main.py  utils.py
